--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+body{
+ width: 600px;
+ color: white;
+
+ background: grey;
+ }
+h1 {
+font-family: sans-serif;
+font-size: 32px;
+vertical-align: center;
+}
